--- a/src/components/character/character.module.css
+++ b/src/components/character/character.module.css
@@ -1,5 +1,5 @@
 .characterCard {
-  background: #949496;
+  background: #2b2b4e;
   display: grid;
   grid-auto-flow: column;
   grid-template-columns: auto 1fr;
