--- a/src/style.css
+++ b/src/style.css
@@ -36,4 +36,7 @@ h1 {
 .characterContainer {
   display: grid;
   grid-gap: 2em;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  place-items: center;
+  margin-top: 5rem;
 }
